# fast-search

./: .gitignore
core/: Cargo.toml
core/src/: etl.rs  main.rs  search_engine.rs
loader/: requirements.txt
searcher/: index.py  main.py
web2/: package-lock.json  package.json
web2/src/: App.vue
