[package]
name = "fast-search"
version = "0.1.0"
authors = ["egorgam <ge@zvuk.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tantivy = "0.13.2"
serde = "1.0.118"
serde_json = "1.0.60"
csv = "1.1.5"
actix-cors = "0.5.3"
whatlang = "0.11.1"
